name:                system-rea
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ollef/system-rea
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           2018 Olle Fredriksson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable system-rea
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , filepath
                     , http-conduit
                     , time
                     , unordered-containers
                     , utf8-string
                     , xeno
